Create and configure composer.json file for project Add autoloading feature to the project Remove php 5.3 incompatible syntax of array declarations Refactor code for proper usage with namespaces

--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,11 @@
     "meta-data"
   ],
   "require": {
-    "php": "^5.3",
+    "php": ">=5.3",
     "ext-pcntl": "*"
+  },
+  "autoload": {
+    "psr-4": { "Exiftool\\": "src/" }
   },
   "support": {
     "docs": "https://www.sno.phy.queensu.ca/~phil/exiftool/faq.html"
